Add benchmark. Use PPath methods instead of getting the Java Path. Remove unnecessary Kotlin plugin from several pom.xml files. Read can fail when the path does not exist, and this needs to be checked.